--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "financial-home": {
+    "ui-financial-home": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/financial-home",
+            "outputPath": "dist/ui-financial-home",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -25,10 +25,15 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -67,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "financial-home:build"
+            "browserTarget": "ui-financial-home:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "financial-home:build:production"
+              "browserTarget": "ui-financial-home:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "financial-home:build"
+            "browserTarget": "ui-financial-home:build"
           }
         },
         "test": {
@@ -93,7 +98,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -116,19 +121,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "financial-home:serve"
+            "devServerTarget": "ui-financial-home:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "financial-home:serve:production"
+              "devServerTarget": "ui-financial-home:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "financial-home",
+  "defaultProject": "ui-financial-home",
   "cli": {
-    "analytics": false
+    "analytics": "ab4b9db7-0730-4e65-a19a-d670f00ca4f2"
   }
 }
