--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -17,5 +17,5 @@
       "dom"
     ],
     "emitDecoratorMetadata": false
-  }
+  },
 }
